# pacman

./: .gitlab-ci.yml  meson.build  tmpfiles.conf
doc/: SRCINFO.5.asciidoc  meson.build  pacman.8.asciidoc  repo-add.8.asciidoc
etc/: pacman.conf.in
etc/makepkg.conf.d/: rust.conf.in
lib/libalpm/: add.c  alpm.c  alpm.h  be_local.c  be_package.c  be_sync.c  db.c  db.h  deps.c  deps.h  diskspace.c  dload.c  error.c  handle.c  hook.c  meson.build  remove.c  sandbox.c  sandbox_fs.c  sandbox_fs.h  sync.c  sync.h  trans.c  trans.h  util.c  util.h
lib/libalpm/po/: ar.po  ast.po  az_AZ.po  bg.po  br.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_419.po  eu.po  eu_ES.po  fi.po  fr.po  gl.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  kk.po  ko.po  libalpm.pot  lt.po  nb.po  nl.po  pl.po  (+13 more)
proto/: PKGBUILD-vcs.proto
scripts/: makepkg.sh.in  repo-add.sh.in
scripts/completion/: zsh_completion.in
scripts/libmakepkg/: buildenv.sh.in
scripts/po/: az_AZ.po  bg.po  br.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_419.po  eu.po  eu_ES.po  fi.po  fr.po  gl.po  hi.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  nb.po  nl.po  pacman-scripts.pot  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po  (+1 more)
src/fuzzing/: fuzz_alpm_extract_keyid.c  fuzz_parseconfigfile.c  fuzz_string_length.c  fuzz_util_string_length.c  fuzz_wordsplit.c  meson.build
src/pacman/: callback.c  conf.c  conf.h  pacman.c  pacman.h  query.c  remove.c  sync.c  trans.c  upgrade.c  util.c  util.h
test/pacman/: meson.build
(+72 files in other folders)
