fuzz_wordsplit_sources = files('''
  fuzz_wordsplit.c
'''.split())

fuzz_string_length_sources = files('''
  fuzz_string_length.c
'''.split())

fuzz_alpm_extract_keyid_sources = files('''
  fuzz_alpm_extract_keyid.c
'''.split())

fuzz_parseconfigfile_sources = files('''
  fuzz_parseconfigfile.c
'''.split())